<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- ========== 父 POM 不再继承 spring-boot ========== -->
    <!-- 只有最终的启动模块才继承 spring-boot-starter-parent -->

    <groupId>lyjew.com</groupId>
    <artifactId>LyClaw</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>  <!-- ← 关键：父工程打包方式为 pom -->
    <name>LyClaw</name>
    <description>LyClaw Multi-Module</description>

    <!-- ========== 声明子模块 ========== -->
    <modules>
        <!-- L1 基础层 -->
        <module>lyclaw-common</module>
        <module>lyclaw-core</module>

        <!-- L0 基础设施层 -->
        <module>lyclaw-infra</module>

        <!-- L3 协议层 -->
        <module>lyclaw-protocol</module>

        <!-- L2 适配器层 -->
        <module>lyclaw-adapter</module>

        <!-- L4 四元核心层 -->
        <module>lyclaw-plan</module>
        <module>lyclaw-memory</module>
        <module>lyclaw-action</module>
        <module>lyclaw-reflect</module>

        <!-- L5 编排层 -->
        <module>lyclaw-orchestration</module>

        <!-- L6 门面层 -->
        <module>lyclaw-facade</module>

        <!-- 存储实现 -->
        <module>lyclaw-storage</module>

        <!-- lyclaw-engine 功能已全部分发至各微服务，模块删除 -->
        <!-- lyclaw-web 已被 lyclaw-gateway 替代，模块删除 -->

        <!-- L8 网关层 (Spring Cloud Gateway) -->
        <module>lyclaw-gateway</module>
    </modules>

    <!-- ========== properties 统一定义版本 ========== -->
    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- 依赖版本统一管理 -->
        <spring-boot.version>3.5.14</spring-boot.version>
        <okhttp.version>4.12.0</okhttp.version>
        <retrofit.version>2.9.0</retrofit.version>
        <hutool.version>5.8.44</hutool.version>
        <reactor.version>3.6.8</reactor.version>
        <lombok.version>1.18.36</lombok.version>

        <!-- Spring Cloud & Alibaba 微服务版本 -->
        <spring-cloud.version>2025.0.0</spring-cloud.version>
        <spring-cloud-alibaba.version>2025.0.0.0</spring-cloud-alibaba.version>
    </properties>

    <!-- ========== dependencyManagement 统一管理依赖 ========== -->
    <!-- 这里只声明版本，不实际引入 -->
    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM（统一管理所有 spring-boot 依赖版本） -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud Alibaba BOM -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 自己的模块 -->
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-storage</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 加 core -->
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 新增模块 -->
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-infra</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-protocol</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-plan</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-memory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-action</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-reflect</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-orchestration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-facade</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>lyjew.com</groupId>
                <artifactId>lyclaw-gateway</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Micrometer (可观测性) -->
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-core</artifactId>
                <version>1.14.5</version>
            </dependency>

            <!-- 第三方依赖版本锁定 -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>logging-interceptor</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>retrofit</artifactId>
                <version>${retrofit.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-core</artifactId>
                <version>${reactor.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- ========== 公共依赖（所有子模块都会继承） ========== -->
    <dependencies>
        <!-- Lombok（所有模块都需要） -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- 测试（所有模块都需要） -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Maven Enforcer：依赖图检查 + 禁止循环依赖 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[17,)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[3.8,)</version>
                                </requireMavenVersion>
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>